--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <div class="center-container">
         <div class="logo">
-            <a href="Meny.html">
+            <a href="index.html">
                 <img src="logo.png" alt="Bildbeskrivning">
             </a>
         </div>
