--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </div>
         <div class="menu">
             <a href="hookah.html" class="menu-button">Hookah</a>
-            <a href="Drinks.html" class="menu-button">Drinks</a>
+            <a href="Drinks.html" class="menu-button">Drinks & Snacks</a>
         </div>
     </div>
 </body>
