--- a/hookah.html
+++ b/hookah.html
@@ -47,10 +47,10 @@
         <div class="menu-section">
             <h2>Extras</h2>
             <ul>
-                <li><b>Wir leihen euch unsere Shishas aus!</b></li>
-                <li>Shisha Vermietung<span class="price">10€</span></li>
-                <li>Classic Tabak<span class="price">10€</span></li>
-                <li>Deluxe Tabak<span class="price">10€</span></li>
+                <li><b><span>Wir leihen euch unsere Shishas aus!</span></b></li>
+                <li><span>Shisha Vermietung</span><span class="price">10€</span></li>
+                <li><span> Tabak</span><span class="price">10€</span></li>
+                <li><span>Deluxe Tabak</span><span class="price">10€</span></li>
             </ul>
         </div>
         
