--- a/Drinks.html
+++ b/Drinks.html
@@ -13,17 +13,17 @@
         <div class="menu-section">
             <h2>Alcoholic Drinks</h2>
             <ul>
-                <li><div>Kurze</div><div class="price">2,50€</div></li>
-                <li><div>Spritz</div><div class="price">7€</div></li>
-                <li><div>Lillet</div></li>
-                <li><div>Aperol</div></li>
-                <li><div>Longdrinks</div><div class="price">7€</div></li>
+                <li><span>Kurze</span><span class="price">2,50€</span></li>
+                <li><span>Spritz</span><span class="price">7€</span></li>
+                <li><span>Lillet</span></li>
+                <li><span>Aperol</span></li>
+                <li><span>Longdrinks</span><span class="price">7€</span></li>
                 <ul>
-                    <li>Vodka Energy</li>
-                    <li>Vodka + Saft</li>
-                    <li>Vodka + Softgetränk</li>
-                    <li>Jacky Cola</li>
-                    <li>Gin + Softgetränk</li>
+                    <li><span>Vodka Energy</span></li>
+                    <li><span>Vodka + Saft</span></li>
+                    <li><span>Vodka + Softgetränk</span></li>
+                    <li><span>Jacky Cola</span></li>
+                    <li><span>Gin + Softgetränk</span></li>
                 </ul>
             </ul>
         </div>
@@ -31,38 +31,38 @@
         <div class="menu-section">
             <h2>Cocktails mit Alkohol</h2>
             <ul>
-                <li><div>Caipirinha (classic, Maracuja, Mango Wassermelone, Erdbeere)</div><div class="price">8€</div></li>
-                <li><div>Gin-Berry</div></li>
-                <li><div>Vodka Lime</div></li>
-                <li><div>Sex on the Beach</div></li>
-                <li><div>Fruitylicious</div></li>
-                <li><div>Mojito (classic, Mango)</div></li>
-                <li><div>Pina Colada (mit Sahne)</div></li>
-                <li><div>Hawaiian Blue Coconut</div></li>
-                <li><div>Tequila Sunrise</div></li>
-                <li><div>Strawberry Daiquiri</div></li>
-                <li><div>Mango Daiquiri</div></li>
-                <li><div>Lillet Daiquiri</div></li>
-                <li><div>Aperol Daiquiri</div></li>
+                <li><span>Caipirinha (classic, Maracuja, Mango Wassermelone, Erdbeere)</span><span class="price">8€</span></li>
+                <li><span>Gin-Berry</span></li>
+                <li><span>Vodka Lime</span></li>
+                <li><span>Sex on the Beach</span></li>
+                <li><span>Fruitylicious</span></li>
+                <li><span>Mojito (classic, Mango)</span></li>
+                <li><span>Pina Colada (mit Sahne)</span></li>
+                <li><span>Hawaiian Blue Coconut</span></li>
+                <li><span>Tequila Sunrise</span></li>
+                <li><span>Strawberry Daiquiri</span></li>
+                <li><span>Mango Daiquiri</span></li>
+                <li><span>Lillet Daiquiri</span></li>
+                <li><span>Aperol Daiquiri</span></li>
             </ul>
         </div>
         
         <div class="menu-section">
             <h2>Hot Drinks</h2>
             <ul>
-                <li><div>Kaffee</div><div class="price">2,50€</div></li>
-                <li><div>Cappuccino</div><div class="price">3,00€</div></li>
-                <li><div>Latte Macchiato</div><div class="price">3,50€ (Sirup Karamell, Vanille zzgl. 0,50€)</div></li>
-                <li><div>Mokka</div><div class="price">2,50€</div></li>
-                <li><div>Tee (Schwarztee, Apfeltee) Becher</div><div class="price">2,50€ (Kanne 4,00€)</div></li>
-                <li><div>Marokkanischer Minztee Becher</div><div class="price">3,50€ (Kanne 5,00€)</div></li>
+                <li><span>Kaffee</span><span class="price">2,50€</span></li>
+                <li><span>Cappuccino</span><span class="price">3,00€</span></li>
+                <li><span>Latte Macchiato</span><span class="price">3,50€ (Sirup Karamell, Vanille zzgl. 0,50€)</span></li>
+                <li><span>Mokka</span><span class="price">2,50€</span></li>
+                <li><span>Tee (Schwarztee, Apfeltee) Becher</span><span class="price">2,50€ (Kanne 4,00€)</span></li>
+                <li><span>Marokkanischer Minztee Becher</span><span class="price">3,50€ (Kanne 5,00€)</span></li>
             </ul>
         </div>
         <div class="menu-section">
             <h2>Snacks</h2>
             <ul>
-                <li><div>Nachos</div><div class="price">5€ (extra Dip 1€)</div></li>
-                <li><div>Nussmischung (Schale)</div><div class="price">5€</div></li>
+                <li><span>Nachos</span><span class="price">5€ (extra Dip 1€)</span></li>
+                <li><span>Nussmischung (Schale)</span><span class="price">5€</span></li>
             </ul>
         </div>
 
