--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <div class="center-container">
+    <img src="shisha.png" class="shisha-image" alt="shisha">
+    <div class="content">
         <div class="logo">
             <a href="index.html">
-                <img src="logo.png" alt="Bildbeskrivning">
+                <img src="logo.png" alt="logo">
             </a>
         </div>
         <div class="menu">
