--- a/hookah.html
+++ b/hookah.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+    <img src="shisha.png" class="shisha-image" alt="shisha">
     <div class="logo">
         <a href="index.html">
             <img src="logo.png" alt="Bildbeskrivning">
@@ -71,8 +72,8 @@
                 <li><span>Ice Kaktuz</span><span class="price">10€</span></li>
                 <li><span>African Queen</span><span class="price">10€</span></li>
                 <li><span>Colours</span><span class="price">10€</span></li>
+            </div>
             </ul>
         </div>
-    </div>
 </body>
 </html>
