--- a/Drinks.html
+++ b/Drinks.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+    <img src="shisha.png" class="shisha-image" alt="shisha">
     <div class="logo">
         <a href="index.html">
             <img src="logo.png" alt="Bildbeskrivning">
