--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <img src="shisha.png" class="shisha-image" alt="shisha">
+    <img id="shisha-image" src="shisha.png" class="shisha-image" alt="shisha">
+
     <div class="content">
         <div class="logo">
             <a href="index.html">
@@ -16,5 +17,6 @@
             <a href="Drinks.html" class="menu-button">Drinks & Snacks</a>
         </div>
     </div>
+    <script src="setHeight.js"></script>
 </body>
 </html>
