--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <img id="shisha-image" src="shisha.png" class="shisha-image" alt="shisha">
+    <img src="shisha.png" class="shisha-image" alt="shisha">
 
     <div class="content">
         <div class="logo">
@@ -17,6 +17,5 @@
             <a href="Drinks.html" class="menu-button">Drinks & Snacks</a>
         </div>
     </div>
-    <script src="setHeight.js"></script>
 </body>
 </html>
