--- a/Drinks.html
+++ b/Drinks.html
@@ -11,23 +11,46 @@
         </a>
     </div>
     <div class="menu-sections">
+
+        <div class="menu-section">
+            <h2>Shisha</h2>
+<ul>
+    <li><span>Doppelapfel</span><span class="price">10€</span></li>
+    <li><span>Arctic Lime</span><span class="price">10€</span></li>
+    <li><span>Blackbox</span><span class="price">10€</span></li>
+    <li><span>Black Nana</span><span class="price">10€</span></li>
+    <li><span>Cinderella</span><span class="price">10€</span></li>
+    <li><span>Exotic Blue G</span><span class="price">10€</span></li>
+    <li><span>Ice Kaktus</span><span class="price">10€</span></li>
+    <li><span>Lemon Chill</span><span class="price">10€</span></li>
+    <li><span>Love 66</span><span class="price">10€</span></li>
+    <li><span>Love Story</span><span class="price">10€</span></li>
+    <li><span>Tropical Dragon</span><span class="price">10€</span></li>
+    <li><span>Vaja Blue</span><span class="price">10€</span></li>
+    <li><span>Watermelon Chill</span><span class="price">10€</span></li>
+    <li><span>Wildberry Chill</span><span class="price">10€</span></li>
+</ul>
+</div>
+
+            
+
         <div class="menu-section">
             <h2>Alcoholic Drinks</h2>
             <ul>
-                <li><span>Kurze</span><span class="price">2,50€</span></li>
-                <li><span>Spritz</span><span class="price">7€</span></li>
-                <li><span>Lillet</span></li>
-                <li><span>Aperol</span></li>
-                <li><span>Longdrinks</span><span class="price">7€</span></li>
+                <li><span>Kurze</span><span class="price">7.90€</span></li>
+                <li><span>Spritz</span><span class="price">7.90€</span></li>
+                <li><span>Lillet</span><span class="price">7.90€</span></li>
+                <li><span>Aperol</span><span class="price">7.90€</span></li>
+                <li><span>Longdrinks</span><span class="price">7.90€</span></li>
                 <ul>
-                    <li><span>Vodka Energy</span></li>
-                    <li><span>Vodka + Saft</span></li>
-                    <li><span>Vodka + Softgetränk</span></li>
-                    <li><span>Jacky Cola</span></li>
-                    <li><span>Gin + Softgetränk</span></li>
+                    <li><span>Vodka Energy</span><span class="price">7.90€</span></li>
+                    <li><span>Vodka + Saft</span><span class="price">7.90€</span></li>
+                    <li><span>Vodka + Softgetränk</span><span class="price">7.90€</span></li>
+                    <li><span>Jacky Cola</span><span class="price">7.90€</span></li>
+                    <li><span>Gin + Softgetränk</span><span class="price">7.90€</span></li>
                 </ul>
-            </ul>
-        </div>
+            </div>
+            
 
         <div class="menu-section">
             <h2>Cocktails mit Alkohol</h2>
