--- a/Drinks.html
+++ b/Drinks.html
@@ -15,7 +15,7 @@
         <div class="menu-section">
             <h2>Alcoholic Drinks</h2>
             <ul>
-                <li><span>Kurze</span><span class="price">6.90€</span></li>
+                <li><span>Kurze</span><span class="price">2.50€</span></li>
                 <li><span>Lillet</span><span class="price">6.90€</span></li>
                 <li><span>Aperol</span><span class="price">6.90€</span></li>
                 <li><span>Longdrinks</span><span class="price">6.90€</span></li>
@@ -47,6 +47,20 @@
                     <li><span>Aperol Daiquiri</span><span class="price">7.90€</span></li>
                 </ul>
             </div>
+
+            <div class="menu-section">
+                <h2>Alkoholfreie Cocktails</h2>
+                <ul>
+                    <li><span><b>Cherry Coco Colada</b></span><span class="price">6,90€</span></li>
+                    <li><span>Erdbeer-Limes</span><span class="price">6,90€</span></li>
+                    <li><span>Hakuna Matata</span><span class="price">6,90€</span></li>
+                    <li><span>Virgin Hawaiian Blue Coconut</span><span class="price">6,90€</span></li>
+                    <li><span>Ipanema (Classic, Maracuja, Mango, Wassermelone, Erdbeere)</span><span class="price">6,90€</span></li>
+                    <li><span>Mama Mango</span><span class="price">6,90€</span></li>
+                    <li><span>Virgin Colada</span><span class="price">6,90€</span></li>
+                </ul>
+            </div>
+            
 
             <div class="menu-section">
                 <h2>Non-Alcoholic</h2>
