--- a/Drinks.html
+++ b/Drinks.html
@@ -118,7 +118,7 @@
         <div class="menu-section">
             <h2>Snacks</h2>
             <ul>
-                <li><span>Nachos</span><span class="price">5€</span></li>
+                <li><span>Nachos mit Dip</span><span class="price">5€</span></li>
                 <li><span>Nussmischung (Schale)</span><span class="price">5€</span></li>
             </ul>
         </div>
