--- a/Drinks.html
+++ b/Drinks.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <img src="shisha.png" class="shisha-image" alt="shisha">
+    <img src="shishasmokelarge.gif" class="shisha-image" alt="shisha">
     <div class="logo">
         <a href="index.html">
             <img src="logo.png" alt="Bildbeskrivning">
@@ -118,7 +118,7 @@
         <div class="menu-section">
             <h2>Snacks</h2>
             <ul>
-                <li><span>Nachos mit Dip</span><span class="price">5€</span></li>
+                <li><span>Nachos</span><span class="price">5€</span></li>
                 <li><span>Nussmischung (Schale)</span><span class="price">5€</span></li>
             </ul>
         </div>
