--- a/hookah.html
+++ b/hookah.html
@@ -4,41 +4,58 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <img src="shisha.png" class="shisha-image" alt="shisha">
+    <img src="shishasmokelarge.gif" class="shisha-image" alt="shisha">
     <div class="logo">
         <a href="index.html">
             <img src="logo.png" alt="Bildbeskrivning">
         </a>
+        
     </div>
     <div class="menu-sections">
         <div class="menu-section">
             <h2>Classic</h2>
             <ul>
                 <li><span>Doppelapfel</span><span class="price">10€</span></li>
+                <!--
                 <li><span>Arctic Lime</span><span class="price">10€</span></li>
                 <li><span>Bakatitoo</span><span class="price">10€</span></li>
+                -->
                 <li><span>Black Nana</span><span class="price">10€</span></li>
+                <!--
                 <li><span>Cinderella</span><span class="price">10€</span></li>
                 <li><span>Co Crush</span><span class="price">10€</span></li>
                 <li><span>Exotic Blue G</span><span class="price">10€</span></li>
+                -->
                 <li><span>Golden Anna</span><span class="price">10€</span></li>
                 <li><span>Grenade</span><span class="price">10€</span></li>
                 <li><span>Honey Chew</span><span class="price">10€</span></li>
+                <!--
                 <li><span>Ice Kaktus</span><span class="price">10€</span></li>
+                -->
+                <!--
                 <li><span>Kirsche</span><span class="price">10€</span></li>
+                -->
                 <li><span>Lemon Chill</span><span class="price">10€</span></li>
                 <li><span>Love 66</span><span class="price">10€</span></li>
+                <!--
                 <li><span>Love Story</span><span class="price">10€</span></li>
                 <li><span>Mr Man</span><span class="price">10€</span></li>
+                -->
                 <li><span>Okolom</span><span class="price">10€</span></li>
                 <li><span>Rainbow</span><span class="price">10€</span></li>
+                <!--
                 <li><span>Slushi Peami</span><span class="price">10€</span></li>
                 <li><span>Smoke</span><span class="price">10€</span></li>
                 <li><span>Tropical Dragon</span><span class="price">10€</span></li>
+                -->
                 <li><span>Vaja Blue</span><span class="price">10€</span></li>
+                <!--
                 <li><span>Vampire Night</span><span class="price">10€</span></li>
+                -->
                 <li><span>Watermelon Chill</span><span class="price">10€</span></li>
+                <!--
                 <li><span>Water Twist</span><span class="price">10€</span></li>
+                -->
                 <li><span>Wildberry Chill</span><span class="price">10€</span></li>
             </ul>
         </div>
