--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>SocietyHookah | Meny</title>
+    <title>SocietyHookah | Meny</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <img src="shisha.png" class="shisha-image" alt="shisha">
+    <img class="shisha-image" src="shishasmokelarge.gif" alt="shisha">
 
     <div class="content">
         <div class="logo">
@@ -18,5 +18,7 @@
             <a href="Drinks.html" class="menu-button">Drinks & Snacks</a>
         </div>
     </div>
+    <script src="setHeight.js"></script>
+   
 </body>
 </html>
