--- a/Drinks.html
+++ b/Drinks.html
@@ -79,7 +79,7 @@
                 <h2>Alkoholfrei</h2>
                 <ul>
                     <li><span>Eistee</span><span class="price">3.90€</span></li>
-                    <li><span>Arizona: Pfirsich, Zitrone, Fruit Punch, Wassermelone, Granatapfel, Blaubeere</span></li>
+                    <li><span>Arizona: Pfirsich, Zitrone, Fruit Punch, Wassermelone, Granatapfel, Blaubeere</span></span><span class="price">3,50€</span></li>
                     <li><span>Säfte (0,2 l - Cranberry, Erdbeere, Banane, Kirsche, Maracuja, Orange, Mango, Apfel, Ananas)</span><span class="price">2,90€</span></li>
                     <li><span>Säfte (0,4 l - Cranberry, Erdbeere, Banane, Kirsche, Maracuja, Orange, Mango, Apfel, Ananas)</span><span class="price">4,90€</span></li>
                     <li><span>Alles als 0,4 Schorle möglich!</span></li>
