--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         
            
             </ul>
+               </div>
+        <a href="Drinks.html" class="back-to-index">Drinks & Snacks</a>   
+    </div>
         </div>
 <!-- 
         <div class="menu-section">
