--- a/Drinks.html
+++ b/Drinks.html
@@ -126,6 +126,9 @@
                 <li><span>Nachos</span><span class="price">5€</span></li>
                 <li><span>Nussmischung (Schale)</span><span class="price">5€</span></li>
             </ul>
+               </div>
+        <a href="index.html" class="back-to-index drinks-button">Hookah</a>
+    </div>
         </div>
 
     </div>
