--- a/Drinks.html
+++ b/Drinks.html
@@ -29,7 +29,7 @@
                 <li><span>Kurze</span><span class="price">3€</span></li>
                 <li><span>Lillet</span><span class="price">7,90€</span></li>
                 <li><span>Aperol</span><span class="price">7,90€</span></li>
-                <li><span>Longdrinks</span><span class="price">7,90€</span></li>
+                <li><span>Longdrinks</span></li>
                 <ul class="submenu-list">
                     <li><span>Vodka Energy</span><span class="price">7,90€</span></li>
                     <li><span>Vodka + Saft</span><span class="price">7,90€</span></li>
@@ -67,7 +67,7 @@
 
         <!-- Bild mellan kategorier -->
         <div class="category-image">
-            <img src="Coffedrink.gif" alt="Coffee Drink">
+            <img src="Coffeedrink.gif" alt="Coffee Drink">
         </div>
 
         <!-- Alkoholfreie Cocktails Section -->
@@ -174,8 +174,8 @@
         <p>Folge uns auf Instagram:</p>
         <div class="social-media">
             <a href="https://www.instagram.com/societyhookahlounge/" class="instagram-link">
-                <img src="instagram-icon.png" alt="@">
-                <span>societyhookahlounge</span>
+                <img src="instagram-icon.png" alt="Instagram">
+                <span>@societyhookahlounge</span>
             </a>
         </div>
         <p>&copy; 2024 Society Hookah. Alle Rechte vorbehalten.</p>
