--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Bakgrundsbild -->
-    <div class="background-image"></div>
-
     <!-- Logotyp -->
     <header>
         <div class="logo-container">
@@ -57,12 +54,11 @@
 
     <!-- Footer med Instagram -->
     <footer>
-        <p>Folge uns auf Instagram:</p>
+        <p>Följ oss på Instagram:</p>
         <div class="social-media">
             <a href="https://www.instagram.com/societyhookahlounge/" class="instagram-link">
-                <img src="instagram-icon.png" alt="@">
-                <br>
-                <span>societyhookahlounge</span>
+                <img src="instagram-icon.png" alt="Instagram">
+                <span>@societyhookahlounge</span>
             </a>
         </div>
         <p>&copy; 2024 Society Hookah. Alla rättigheter förbehållna.</p>
