--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Bakgrundsbild för vattenpipan -->
+    <div class="background-image"></div>
+
     <!-- Logotyp -->
     <header>
         <div class="logo-container">
@@ -57,7 +60,7 @@
         <p>Följ oss på Instagram:</p>
         <div class="social-media">
             <a href="https://www.instagram.com/societyhookahlounge/" class="instagram-link">
-                <img src="instagram-icon.png" alt="Instagram">
+                <img src="instagram-icon.png" alt="@" />
                 <span>@societyhookahlounge</span>
             </a>
         </div>
