--- a/Drinks.html
+++ b/Drinks.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Society Hookah - Drinks & Snacks</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Google Fonts för modern typografi -->
+    <!-- Google Fonts für moderne Typografie -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <!-- Länk till CSS-filen -->
@@ -174,7 +174,7 @@
         <p>Folge uns auf Instagram:</p>
         <div class="social-media">
             <a href="https://www.instagram.com/societyhookahlounge/" class="instagram-link">
-                <img src="instagram-icon.png" alt="Instagram">
+                <img src="instagram-icon.png" alt="@" />
                 <span>@societyhookahlounge</span>
             </a>
         </div>
@@ -182,3 +182,4 @@
     </footer>
 </body>
 </html>
+s
