--- a/Drinks.html
+++ b/Drinks.html
@@ -174,8 +174,8 @@
         <p>Folge uns auf Instagram:</p>
         <div class="social-media">
             <a href="https://www.instagram.com/societyhookahlounge/" class="instagram-link">
-                <img src="instagram-icon.png" alt="@" />
-                <span>@societyhookahlounge</span>
+                <img src="instagram-icon.png"  />
+                <span>@ societyhookahlounge</span>
             </a>
         </div>
         <p>&copy; 2024 Society Hookah. Alle Rechte vorbehalten.</p>
