--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <p>Följ oss på Instagram:</p>
         <div class="social-media">
             <a href="https://www.instagram.com/societyhookahlounge/" class="instagram-link">
-                <img src="instagram-icon.png" alt="@" />
-                <span>@societyhookahlounge</span>
+                <img src="instagram-icon.png" />
+                <span>@ societyhookahlounge</span>
             </a>
         </div>
         <p>&copy; 2024 Society Hookah. Alla rättigheter förbehållna.</p>
