--- a/Drinks.html
+++ b/Drinks.html
@@ -67,7 +67,7 @@
 
         <!-- Bild mellan kategorier -->
         <div class="category-image">
-            <img src="Coffeedrink.gif" alt="Coffee Drink">
+            <img src="Coffedrink.gif" alt="Coffee Drink">
         </div>
 
         <!-- Alkoholfreie Cocktails Section -->
