--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
 
     <!-- Footer med Instagram -->
     <footer>
-        <p>Följ oss på Instagram:</p>
+        <p>Folge uns auf Instagram:</p>
         <div class="social-media">
             <a href="https://www.instagram.com/societyhookahlounge/" class="instagram-link">
                 <img src="instagram-icon.png" />
                 <span>@ societyhookahlounge</span>
             </a>
         </div>
-        <p>&copy; 2024 Society Hookah. Alla rättigheter förbehållna.</p>
+        <p>&copy; 2024 Society Hookah. Alle Rechte vorbehalten.</p>
     </footer>
 </body>
 </html>
