--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="social-media">
             <a href="https://www.instagram.com/societyhookahlounge/" class="instagram-link">
                 <img src="instagram-icon.png" />
-                <span>@ societyhookahlounge</span>
+                <span>societyhookahlounge</span>
             </a>
         </div>
         <p>&copy; 2024 Society Hookah. Alle Rechte vorbehalten.</p>
