--- a/Drinks.html
+++ b/Drinks.html
@@ -175,7 +175,7 @@
         <div class="social-media">
             <a href="https://www.instagram.com/societyhookahlounge/" class="instagram-link">
                 <img src="instagram-icon.png"  />
-                <span>societyhookahlounge</span>
+                <span>Societyhookahlounge</span>
             </a>
         </div>
         <p>&copy; 2024 Society Hookah. Alle Rechte vorbehalten.</p>
