--- a/Drinks.html
+++ b/Drinks.html
@@ -125,10 +125,10 @@
             </ul>
         </section>
 
-        <!-- Bild mellan kategorier -->
+        <!-- 
         <div class="category-image">
-            <img src="snacks-image.jpg" alt="Snacks">
-        </div>
+            <img src="snacks-image.jpg" alt="Snacks"> 
+        </div> Bild på snacks mellan kategorier -->
 
         <!-- Milchshake Section -->
         <section class="menu-section">
